# claude-skill-marketplace

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  registry.json  registry.schema.json
.github/workflows/: release.yml
auto_dev_skills/: cli.py
python-code/: SKILL.md
python-code/references/: async-patterns.md  class-metaprogramming.md  testing.md
python-code/references/effective-python/: 03_functions.md  05_concurrency.md  06_error_handling.md
python-developer/: SKILL.md
python-developer/references/: ddd-patterns.md  templates.md
python-developer/scripts/: verify-architecture.py
skill-creator/references/: writing-principles.md
skill-evaluator/: SKILL.md
skill-evaluator/agents/: analyzer.md  grader.md  runner.md
skill-evaluator/evals/: evals.json
skill-evaluator/references/: eval-design.md
skill-evaluator/scripts/: compare_runs.py  run_evals.py  utils.py  validate_skill.py
skills/effective-python/: SKILL.md
skills/effective-python/references/: 01_pythonic_thinking.md  02_lists_and_dictionaries.md  04_classes.md  08_standard_library.md  effective_python_rules.md
skills/python-code/: SKILL.md
skills/python-code/references/: advanced-types.md  data-model.md
skills/python-developer/: SKILL.md
skills/python-developer/references/: phases.md
skills/python-developer/scripts/: quality-check.sh
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: blind-comparison.md  description-optimization.md  platform-specific.md
skills/vue3-sfc/: SKILL.md
skills/vue3-sfc/references/: file-handling.md  (+2 more)
(+6 files in other folders)
