[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-dev-skills"
version = "1.0.0"
description = "Community-driven marketplace for Claude Code skills"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "lordqyxz", email = "lordqyxz@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.scripts]
auto-dev-skills-install = "auto_dev_skills.cli:install"

[project.urls]
Homepage = "https://github.com/lordqyxz/claude-skill-marketplace"
Repository = "https://github.com/lordqyxz/claude-skill-marketplace"
Issues = "https://github.com/lordqyxz/claude-skill-marketplace/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_dev_skills*"]
